crates/toml_edit/tests/snapshots/invalid/datetime/offset-overflow-hour.stderr
TOML parse error at line 2, column 5
  |
2 | d = 1985-06-18 17:04:07+25:00
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
invalid offset, expected hours between 00 and 23
